--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -3,13 +3,16 @@ on: [push]
 jobs:
     deploy:
         runs-on: ubuntu-latest
+        environment: deploy
         steps:
-            - run: echo $SERVER_PORT
-            - run: echo $SERVER_LOGIN
-            - run: echo $SERVER_HOST
-            - run: echo $SERVER_DIRECTORY
-            - run: echo ${{ FOOBAR }}
-
-            - run: sshpass -V
-            - run: export SSHPASS=$SERVER_PASS
-            - run: sshpass -p "$SERVER_PASS" ssh -p $SERVER_PORT -o 'StrictHostKeyChecking no' $SERVER_LOGIN@$SERVER_HOST "cd $SERVER_DIRECTORY && dep deploy"
+            - name: executing remote ssh commands using password
+              uses: appleboy/ssh-action@master
+              with:
+                host: ${{ secrets.SERVER_HOST }}
+                username: ${{ secrets.SERVER_LOGIN }}
+                password: ${{ secrets.SERVER_PASS }}
+                port: ${{ secrets.SERVER_PORT }}
+                script: |
+                  whoami
+                  cd ${{secrets.SERVER_DIRECTORY}}
+                  dep deploy
