--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,9 @@
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "friendsofphp/php-cs-fixer": "^2.18",
         "maglnet/composer-require-checker": "^3.2",
-        "phpstan/phpstan": "^0.12",
-        "phpstan/phpstan-doctrine": "*",
-        "phpstan/phpstan-symfony": "*",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-symfony": "^1.2",
         "roave/security-advisories": "dev-latest",
         "sebastian/phpcpd": "^6.0",
         "squizlabs/php_codesniffer": "^3.6",
@@ -92,15 +92,6 @@
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
-        "auto-scripts": [
-            "@php bin/console cache:clear"
-        ],
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ],
         "php-with-debug": [
             "Composer\\Config::disableProcessTimeout",
             "@php -dxdebug.mode=debug -dxdebug.start_with_request=yes"
@@ -108,13 +99,14 @@
         "deploy": [
             "rm -rf tools/logs/*",
             "rm -rf tools/docker/logs/*",
-            "@php bin/console doctrine:fixtures:load -q",
-            "@auto-scripts"
+            "@php bin/console doctrine:migrations:migrate -n -q"
         ],
         "first-install": [
             "@php bin/console doctrine:schema:create --env=dev -n -q",
             "@php bin/console doctrine:migrations:sync-metadata-storage",
             "@php bin/console doctrine:migrations:version --add --all -n -q",
+            "@php bin/console doctrine:migrations:migrate -n -q",
+            "mysql -u root -h 172.16.20.3 -p discord_notification < tools/database/dump.sql\nroot",
             "@deploy"
         ],
         "test": [
