--- a/config/packages/prod/routing.yaml
+++ b/config/packages/prod/routing.yaml
@@ -1,3 +1,4 @@
-framework:
-    router:
-        strict_requirements: null
+when@prod:
+    framework:
+        router:
+            strict_requirements: null
