--- a/config/packages/test/framework.yaml
+++ b/config/packages/test/framework.yaml
@@ -1,4 +1,5 @@
-framework:
-    test: true
-    session:
-        storage_id: session.storage.mock_file
+when@test:
+    framework:
+        test: true
+        session:
+            storage_id: session.storage.mock_file
