--- a/tools/docker/php8.2/xdebug.ini
+++ b/tools/docker/php8.2/xdebug.ini
@@ -1,5 +1,5 @@
 ; xdebug 2 to 3 migrate https://xdebug.org/docs/all_settings#mode
-zend_extension = /usr/local/lib/php/extensions/no-debug-non-zts-20190902/xdebug.so
+zend_extension = /usr/local/lib/php/extensions/no-debug-non-zts-20220829/xdebug.so
 xdebug.log = "/application/tools/logs/xdebug.log"
 
 ; off       Nothing is enabled. Xdebug does no work besides checking whether functionality is enabled. Use this setting if you want close to 0 overhead.
@@ -9,12 +9,13 @@ xdebug.log = "/application/tools/logs/xdebug.log"
 ; gcstats   Enables Garbage Collection Statistics to collect statistics about PHP's Garbage Collection Mechanism.
 ; profile   Enables Profiling, with which you can analyse performance bottlenecks with tools like KCacheGrind.
 ; trace     Enables the Function Trace feature, which allows you record every function call, including arguments, variable assignment, and return value that is made during a request to a file.
-xdebug.mode = off
+xdebug.mode = debug
 
 xdebug.start_with_request = yes
 xdebug.cli_color = off
 
-xdebug.client_host = 169.254.83.143
+;xdebug.client_host = 169.254.83.143
+xdebug.client_host = 127.0.0.1
 xdebug.client_port = 9000
 
 xdebug.idekey = PHPSTORM
