add button for twitch auth

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -84,6 +84,11 @@ services:
             - '%env(TWITCH_CLIENT_ID)%'
             - '%env(TWITCH_SECRET)%'
 
+    App\Builder\TwitchAuthenticatorBuilder:
+        arguments:
+            - '%env(TWITCH_CLIENT_ID)%'
+            - '%env(TWITCH_REDIRECT_URL)%'
+
     Symfony\Component\Form\FormFactory:
         alias: form.factory
 
